--- a/templates/header.html
+++ b/templates/header.html
@@ -6,4 +6,5 @@
     <meta name="description" content="Inventory">
     <link rel="stylesheet" href="{% static 'output/styles.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3/dist/css/bootstrap.min.css' %}">
+    <script src="{% static 'bootstrap-5.3.3/dist/js/bootstrap.min.js' %}">
 </head>
