--- a/templates/header.html
+++ b/templates/header.html
@@ -9,4 +9,6 @@
     <script src="{% static 'bootstrap-5.3.3/dist/js/bootstrap.min.js' %}">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/salesforce-lightning-design-system/2.15.4/styles/salesforce-lightning-design-system.min.css">
+    {% block extrahead %}
+    {% endblock %}
 </head>
